--- a/data/glade/fatfind.glade
+++ b/data/glade/fatfind.glade
@@ -83,7 +83,7 @@
 		<widget class="GtkHBox" id="hbox1">
 		  <property name="border_width">2</property>
 		  <property name="visible">True</property>
-		  <property name="homogeneous">False</property>
+		  <property name="homogeneous">True</property>
 		  <property name="spacing">4</property>
 
 		  <child>
@@ -180,7 +180,7 @@
 		  <child>
 		    <widget class="GtkVBox" id="vbox12">
 		      <property name="visible">True</property>
-		      <property name="homogeneous">False</property>
+		      <property name="homogeneous">True</property>
 		      <property name="spacing">0</property>
 
 		      <child>
@@ -282,8 +282,8 @@
 				    </widget>
 				    <packing>
 				      <property name="padding">0</property>
-				      <property name="expand">True</property>
-				      <property name="fill">True</property>
+				      <property name="expand">False</property>
+				      <property name="fill">False</property>
 				    </packing>
 				  </child>
 
@@ -308,8 +308,8 @@
 				    </widget>
 				    <packing>
 				      <property name="padding">0</property>
-				      <property name="expand">True</property>
-				      <property name="fill">True</property>
+				      <property name="expand">False</property>
+				      <property name="fill">False</property>
 				    </packing>
 				  </child>
 				</widget>
