--- a/data/glade/fatfind.glade
+++ b/data/glade/fatfind.glade
@@ -400,14 +400,14 @@
 	      <child>
 		<widget class="GtkVBox" id="vbox13">
 		  <property name="visible">True</property>
-		  <property name="homogeneous">False</property>
+		  <property name="homogeneous">True</property>
 		  <property name="spacing">0</property>
 
 		  <child>
 		    <widget class="GtkHBox" id="hbox17">
 		      <property name="visible">True</property>
-		      <property name="homogeneous">False</property>
-		      <property name="spacing">0</property>
+		      <property name="homogeneous">True</property>
+		      <property name="spacing">4</property>
 
 		      <child>
 			<widget class="GtkFrame" id="frame7">
@@ -437,54 +437,11 @@
 				  <child>
 				    <widget class="GtkTable" id="table2">
 				      <property name="visible">True</property>
-				      <property name="n_rows">4</property>
+				      <property name="n_rows">5</property>
 				      <property name="n_columns">2</property>
 				      <property name="homogeneous">False</property>
 				      <property name="row_spacing">0</property>
 				      <property name="column_spacing">0</property>
-
-				      <child>
-					<widget class="GtkHScale" id="hscale1">
-					  <property name="visible">True</property>
-					  <property name="can_focus">True</property>
-					  <property name="draw_value">True</property>
-					  <property name="value_pos">GTK_POS_TOP</property>
-					  <property name="digits">0</property>
-					  <property name="update_policy">GTK_UPDATE_CONTINUOUS</property>
-					  <property name="inverted">False</property>
-					  <property name="adjustment">2 0 100 1 10 0</property>
-					</widget>
-					<packing>
-					  <property name="left_attach">1</property>
-					  <property name="right_attach">2</property>
-					  <property name="top_attach">1</property>
-					  <property name="bottom_attach">2</property>
-					  <property name="x_options">fill</property>
-					  <property name="y_options">fill</property>
-					</packing>
-				      </child>
-
-				      <child>
-					<widget class="GtkCheckButton" id="clumpEnabled">
-					  <property name="visible">True</property>
-					  <property name="can_focus">True</property>
-					  <property name="label" translatable="yes">Clumpiness:</property>
-					  <property name="use_underline">True</property>
-					  <property name="relief">GTK_RELIEF_NORMAL</property>
-					  <property name="focus_on_click">True</property>
-					  <property name="active">False</property>
-					  <property name="inconsistent">False</property>
-					  <property name="draw_indicator">True</property>
-					</widget>
-					<packing>
-					  <property name="left_attach">0</property>
-					  <property name="right_attach">1</property>
-					  <property name="top_attach">1</property>
-					  <property name="bottom_attach">2</property>
-					  <property name="x_options">fill</property>
-					  <property name="y_options"></property>
-					</packing>
-				      </child>
 
 				      <child>
 					<widget class="GtkCheckButton" id="radiusEnabled">
@@ -515,7 +472,7 @@
 					  <property name="spacing">0</property>
 
 					  <child>
-					    <widget class="GtkHScale" id="hscale4">
+					    <widget class="GtkHScale" id="radiusLower">
 					      <property name="visible">True</property>
 					      <property name="can_focus">True</property>
 					      <property name="draw_value">True</property>
@@ -533,7 +490,7 @@
 					  </child>
 
 					  <child>
-					    <widget class="GtkHScale" id="hscale5">
+					    <widget class="GtkHScale" id="radiusUpper">
 					      <property name="visible">True</property>
 					      <property name="can_focus">True</property>
 					      <property name="draw_value">True</property>
@@ -541,7 +498,7 @@
 					      <property name="digits">1</property>
 					      <property name="update_policy">GTK_UPDATE_CONTINUOUS</property>
 					      <property name="inverted">False</property>
-					      <property name="adjustment">58 0 100 1 10 0</property>
+					      <property name="adjustment">100 0 100 1 10 0</property>
 					    </widget>
 					    <packing>
 					      <property name="padding">0</property>
@@ -555,6 +512,90 @@
 					  <property name="right_attach">2</property>
 					  <property name="top_attach">0</property>
 					  <property name="bottom_attach">1</property>
+					  <property name="y_options">fill</property>
+					</packing>
+				      </child>
+
+				      <child>
+					<widget class="GtkHScale" id="fuzzSlider">
+					  <property name="visible">True</property>
+					  <property name="can_focus">True</property>
+					  <property name="draw_value">True</property>
+					  <property name="value_pos">GTK_POS_TOP</property>
+					  <property name="digits">0</property>
+					  <property name="update_policy">GTK_UPDATE_CONTINUOUS</property>
+					  <property name="inverted">False</property>
+					  <property name="adjustment">0 -100 100 1 10 0</property>
+					</widget>
+					<packing>
+					  <property name="left_attach">1</property>
+					  <property name="right_attach">2</property>
+					  <property name="top_attach">1</property>
+					  <property name="bottom_attach">2</property>
+					  <property name="x_options">fill</property>
+					</packing>
+				      </child>
+
+				      <child>
+					<widget class="GtkCheckButton" id="fuzzEnabled">
+					  <property name="visible">True</property>
+					  <property name="can_focus">True</property>
+					  <property name="label" translatable="yes">Fuzziness:</property>
+					  <property name="use_underline">True</property>
+					  <property name="relief">GTK_RELIEF_NORMAL</property>
+					  <property name="focus_on_click">True</property>
+					  <property name="active">False</property>
+					  <property name="inconsistent">False</property>
+					  <property name="draw_indicator">True</property>
+					</widget>
+					<packing>
+					  <property name="left_attach">0</property>
+					  <property name="right_attach">1</property>
+					  <property name="top_attach">1</property>
+					  <property name="bottom_attach">2</property>
+					  <property name="x_options">fill</property>
+					  <property name="y_options"></property>
+					</packing>
+				      </child>
+
+				      <child>
+					<widget class="GtkHScale" id="countSlider">
+					  <property name="visible">True</property>
+					  <property name="can_focus">True</property>
+					  <property name="draw_value">True</property>
+					  <property name="value_pos">GTK_POS_TOP</property>
+					  <property name="digits">0</property>
+					  <property name="update_policy">GTK_UPDATE_CONTINUOUS</property>
+					  <property name="inverted">False</property>
+					  <property name="adjustment">0 0 400 1 10 0</property>
+					</widget>
+					<packing>
+					  <property name="left_attach">1</property>
+					  <property name="right_attach">2</property>
+					  <property name="top_attach">4</property>
+					  <property name="bottom_attach">5</property>
+					  <property name="x_options">fill</property>
+					  <property name="y_options">fill</property>
+					</packing>
+				      </child>
+
+				      <child>
+					<widget class="GtkHScale" id="clumpSlider">
+					  <property name="visible">True</property>
+					  <property name="can_focus">True</property>
+					  <property name="draw_value">True</property>
+					  <property name="value_pos">GTK_POS_TOP</property>
+					  <property name="digits">0</property>
+					  <property name="update_policy">GTK_UPDATE_CONTINUOUS</property>
+					  <property name="inverted">False</property>
+					  <property name="adjustment">0 0 100 1 10 0</property>
+					</widget>
+					<packing>
+					  <property name="left_attach">1</property>
+					  <property name="right_attach">2</property>
+					  <property name="top_attach">3</property>
+					  <property name="bottom_attach">4</property>
+					  <property name="x_options">fill</property>
 					  <property name="y_options">fill</property>
 					</packing>
 				      </child>
@@ -574,18 +615,18 @@
 					<packing>
 					  <property name="left_attach">0</property>
 					  <property name="right_attach">1</property>
-					  <property name="top_attach">3</property>
-					  <property name="bottom_attach">4</property>
+					  <property name="top_attach">4</property>
+					  <property name="bottom_attach">5</property>
 					  <property name="x_options">fill</property>
 					  <property name="y_options"></property>
 					</packing>
 				      </child>
 
 				      <child>
-					<widget class="GtkCheckButton" id="fuzzEnabled">
+					<widget class="GtkCheckButton" id="clumpEnabled">
 					  <property name="visible">True</property>
 					  <property name="can_focus">True</property>
-					  <property name="label" translatable="yes">Fuzziness:</property>
+					  <property name="label" translatable="yes">Clumpiness:</property>
 					  <property name="use_underline">True</property>
 					  <property name="relief">GTK_RELIEF_NORMAL</property>
 					  <property name="focus_on_click">True</property>
@@ -596,51 +637,23 @@
 					<packing>
 					  <property name="left_attach">0</property>
 					  <property name="right_attach">1</property>
-					  <property name="top_attach">2</property>
-					  <property name="bottom_attach">3</property>
+					  <property name="top_attach">3</property>
+					  <property name="bottom_attach">4</property>
 					  <property name="x_options">fill</property>
 					  <property name="y_options"></property>
 					</packing>
 				      </child>
 
 				      <child>
-					<widget class="GtkHScale" id="gaussianBlur">
+					<widget class="GtkHSeparator" id="hseparator8">
 					  <property name="visible">True</property>
-					  <property name="can_focus">True</property>
-					  <property name="draw_value">True</property>
-					  <property name="value_pos">GTK_POS_TOP</property>
-					  <property name="digits">0</property>
-					  <property name="update_policy">GTK_UPDATE_CONTINUOUS</property>
-					  <property name="inverted">False</property>
-					  <property name="adjustment">0 0 100 1 10 0</property>
 					</widget>
 					<packing>
-					  <property name="left_attach">1</property>
+					  <property name="left_attach">0</property>
 					  <property name="right_attach">2</property>
 					  <property name="top_attach">2</property>
 					  <property name="bottom_attach">3</property>
 					  <property name="x_options">fill</property>
-					</packing>
-				      </child>
-
-				      <child>
-					<widget class="GtkHScale" id="hscale3">
-					  <property name="visible">True</property>
-					  <property name="can_focus">True</property>
-					  <property name="draw_value">True</property>
-					  <property name="value_pos">GTK_POS_TOP</property>
-					  <property name="digits">0</property>
-					  <property name="update_policy">GTK_UPDATE_CONTINUOUS</property>
-					  <property name="inverted">False</property>
-					  <property name="adjustment">0 0 400 1 10 0</property>
-					</widget>
-					<packing>
-					  <property name="left_attach">1</property>
-					  <property name="right_attach">2</property>
-					  <property name="top_attach">3</property>
-					  <property name="bottom_attach">4</property>
-					  <property name="x_options">fill</property>
-					  <property name="y_options">fill</property>
 					</packing>
 				      </child>
 				    </widget>
@@ -705,8 +718,51 @@
 			      <property name="right_padding">0</property>
 
 			      <child>
-				<widget class="GtkDrawingArea" id="chosenReferenceDefineSearch">
+				<widget class="GtkVBox" id="vbox15">
 				  <property name="visible">True</property>
+				  <property name="homogeneous">False</property>
+				  <property name="spacing">0</property>
+
+				  <child>
+				    <widget class="GtkImage" id="defineRefImage">
+				      <property name="visible">True</property>
+				      <property name="xalign">0</property>
+				      <property name="yalign">0</property>
+				      <property name="xpad">0</property>
+				      <property name="ypad">0</property>
+				    </widget>
+				    <packing>
+				      <property name="padding">0</property>
+				      <property name="expand">False</property>
+				      <property name="fill">False</property>
+				    </packing>
+				  </child>
+
+				  <child>
+				    <widget class="GtkLabel" id="defineRefInfo">
+				      <property name="visible">True</property>
+				      <property name="can_focus">True</property>
+				      <property name="label" translatable="yes"></property>
+				      <property name="use_underline">False</property>
+				      <property name="use_markup">False</property>
+				      <property name="justify">GTK_JUSTIFY_LEFT</property>
+				      <property name="wrap">True</property>
+				      <property name="selectable">True</property>
+				      <property name="xalign">0</property>
+				      <property name="yalign">0</property>
+				      <property name="xpad">0</property>
+				      <property name="ypad">0</property>
+				      <property name="ellipsize">PANGO_ELLIPSIZE_NONE</property>
+				      <property name="width_chars">-1</property>
+				      <property name="single_line_mode">False</property>
+				      <property name="angle">0</property>
+				    </widget>
+				    <packing>
+				      <property name="padding">0</property>
+				      <property name="expand">False</property>
+				      <property name="fill">False</property>
+				    </packing>
+				  </child>
 				</widget>
 			      </child>
 			    </widget>
@@ -771,6 +827,8 @@
 			  <child>
 			    <widget class="GtkDrawingArea" id="simulatedSearch">
 			      <property name="visible">True</property>
+			      <signal name="expose_event" handler="on_simulatedSearch_expose_event" last_modification_time="Mon, 10 Jul 2006 15:45:00 GMT"/>
+			      <signal name="configure_event" handler="on_simulatedSearch_configure_event" last_modification_time="Mon, 10 Jul 2006 15:55:19 GMT"/>
 			    </widget>
 			  </child>
 			</widget>
