--- a/data/glade/fatfind.glade
+++ b/data/glade/fatfind.glade
@@ -876,20 +876,61 @@
 		      </child>
 
 		      <child>
-			<widget class="GtkHButtonBox" id="hbuttonbox1">
+			<widget class="GtkVBox" id="vbox17">
 			  <property name="visible">True</property>
-			  <property name="layout_style">GTK_BUTTONBOX_DEFAULT_STYLE</property>
+			  <property name="homogeneous">False</property>
 			  <property name="spacing">0</property>
 
 			  <child>
-			    <widget class="GtkButton" id="saveSearchButton">
+			    <widget class="GtkHBox" id="hbox20">
 			      <property name="visible">True</property>
-			      <property name="can_focus">True</property>
-			      <property name="label">gtk-save-as</property>
-			      <property name="use_stock">True</property>
-			      <property name="relief">GTK_RELIEF_NORMAL</property>
-			      <property name="focus_on_click">True</property>
+			      <property name="homogeneous">False</property>
+			      <property name="spacing">0</property>
+
+			      <child>
+				<widget class="GtkEntry" id="searchName">
+				  <property name="visible">True</property>
+				  <property name="can_focus">True</property>
+				  <property name="editable">True</property>
+				  <property name="visibility">True</property>
+				  <property name="max_length">0</property>
+				  <property name="text" translatable="yes"></property>
+				  <property name="has_frame">True</property>
+				  <property name="invisible_char">•</property>
+				  <property name="activates_default">True</property>
+				</widget>
+				<packing>
+				  <property name="padding">0</property>
+				  <property name="expand">True</property>
+				  <property name="fill">True</property>
+				</packing>
+			      </child>
+
+			      <child>
+				<widget class="GtkButton" id="saveSearchButton">
+				  <property name="visible">True</property>
+				  <property name="can_default">True</property>
+				  <property name="has_default">True</property>
+				  <property name="can_focus">True</property>
+				  <property name="label">gtk-save-as</property>
+				  <property name="use_stock">True</property>
+				  <property name="relief">GTK_RELIEF_NORMAL</property>
+				  <property name="focus_on_click">True</property>
+				  <signal name="clicked" handler="on_saveSearchButton_clicked" last_modification_time="Mon, 10 Jul 2006 19:20:30 GMT"/>
+				</widget>
+				<packing>
+				  <property name="padding">0</property>
+				  <property name="expand">False</property>
+				  <property name="fill">False</property>
+				</packing>
+			      </child>
 			    </widget>
+			    <packing>
+			      <property name="padding">0</property>
+			      <property name="expand">False</property>
+			      <property name="fill">True</property>
+			      <property name="pack_type">GTK_PACK_END</property>
+			    </packing>
 			  </child>
 			</widget>
 			<packing>
@@ -983,7 +1024,7 @@
 			      <property name="window_placement">GTK_CORNER_TOP_LEFT</property>
 
 			      <child>
-				<widget class="GtkTreeView" id="treeview1">
+				<widget class="GtkTreeView" id="definedSearches">
 				  <property name="visible">True</property>
 				  <property name="can_focus">True</property>
 				  <property name="headers_visible">True</property>
@@ -1010,7 +1051,7 @@
 			      <property name="spacing">0</property>
 
 			      <child>
-				<widget class="GtkButton" id="button2">
+				<widget class="GtkButton" id="clearSearch">
 				  <property name="visible">True</property>
 				  <property name="can_default">True</property>
 				  <property name="can_focus">True</property>
@@ -1018,11 +1059,12 @@
 				  <property name="use_stock">True</property>
 				  <property name="relief">GTK_RELIEF_NORMAL</property>
 				  <property name="focus_on_click">True</property>
+				  <signal name="clicked" handler="on_clearSearch_clicked" last_modification_time="Mon, 10 Jul 2006 19:48:41 GMT"/>
 				</widget>
 			      </child>
 
 			      <child>
-				<widget class="GtkButton" id="button3">
+				<widget class="GtkButton" id="startSearch">
 				  <property name="visible">True</property>
 				  <property name="can_default">True</property>
 				  <property name="can_focus">True</property>
