--- a/data/glade/fatfind.glade
+++ b/data/glade/fatfind.glade
@@ -1072,6 +1072,7 @@
 				  <property name="use_stock">True</property>
 				  <property name="relief">GTK_RELIEF_NORMAL</property>
 				  <property name="focus_on_click">True</property>
+				  <signal name="clicked" handler="on_startSearch_clicked" last_modification_time="Mon, 10 Jul 2006 20:12:03 GMT"/>
 				</widget>
 			      </child>
 			    </widget>
