--- a/data/glade/fatfind.glade
+++ b/data/glade/fatfind.glade
@@ -963,7 +963,7 @@
 	  <child>
 	    <widget class="GtkLabel" id="label25">
 	      <property name="visible">True</property>
-	      <property name="label" translatable="yes">Define Search</property>
+	      <property name="label" translatable="yes">Define Searchlet</property>
 	      <property name="use_underline">False</property>
 	      <property name="use_markup">False</property>
 	      <property name="justify">GTK_JUSTIFY_LEFT</property>
