--- a/data/glade/fatfind.glade
+++ b/data/glade/fatfind.glade
@@ -897,10 +897,10 @@
 	  </child>
 
 	  <child>
-	    <widget class="GtkVBox" id="vbox19">
+	    <widget class="GtkVPaned" id="vpaned1">
 	      <property name="visible">True</property>
-	      <property name="homogeneous">True</property>
-	      <property name="spacing">0</property>
+	      <property name="can_focus">True</property>
+	      <property name="position">283</property>
 
 	      <child>
 		<widget class="GtkHBox" id="hbox19">
@@ -1349,9 +1349,8 @@
 		  </child>
 		</widget>
 		<packing>
-		  <property name="padding">0</property>
-		  <property name="expand">True</property>
-		  <property name="fill">True</property>
+		  <property name="shrink">True</property>
+		  <property name="resize">False</property>
 		</packing>
 	      </child>
 
@@ -1414,9 +1413,8 @@
 		  </child>
 		</widget>
 		<packing>
-		  <property name="padding">0</property>
-		  <property name="expand">True</property>
-		  <property name="fill">True</property>
+		  <property name="shrink">True</property>
+		  <property name="resize">True</property>
 		</packing>
 	      </child>
 	    </widget>
