--- a/data/glade/fatfind.glade
+++ b/data/glade/fatfind.glade
@@ -1374,16 +1374,71 @@
 		      <property name="right_padding">0</property>
 
 		      <child>
-			<widget class="GtkDrawingArea" id="selectedResult">
+			<widget class="GtkTable" id="table3">
 			  <property name="visible">True</property>
-			  <property name="events">GDK_BUTTON1_MOTION_MASK | GDK_BUTTON_PRESS_MASK | GDK_BUTTON_RELEASE_MASK | GDK_ENTER_NOTIFY_MASK | GDK_LEAVE_NOTIFY_MASK</property>
-			  <signal name="expose_event" handler="on_selectedResult_expose_event" last_modification_time="Wed, 06 Sep 2006 06:53:01 GMT"/>
-			  <signal name="button_press_event" handler="on_selectedResult_button_press_event" last_modification_time="Wed, 06 Sep 2006 06:53:48 GMT"/>
-			  <signal name="button_release_event" handler="on_selectedResult_button_release_event" last_modification_time="Wed, 06 Sep 2006 06:53:52 GMT"/>
-			  <signal name="motion_notify_event" handler="on_selectedResult_motion_notify_event" last_modification_time="Wed, 06 Sep 2006 06:56:55 GMT"/>
-			  <signal name="configure_event" handler="on_selectedResult_configure_event" last_modification_time="Wed, 06 Sep 2006 06:57:12 GMT"/>
-			  <signal name="enter_notify_event" handler="on_selectedResult_enter_notify_event" last_modification_time="Wed, 06 Sep 2006 08:30:25 GMT"/>
-			  <signal name="leave_notify_event" handler="on_selectedResult_leave_notify_event" last_modification_time="Wed, 06 Sep 2006 08:30:30 GMT"/>
+			  <property name="n_rows">2</property>
+			  <property name="n_columns">2</property>
+			  <property name="homogeneous">False</property>
+			  <property name="row_spacing">0</property>
+			  <property name="column_spacing">0</property>
+
+			  <child>
+			    <widget class="GtkDrawingArea" id="selectedResult">
+			      <property name="visible">True</property>
+			      <property name="events">GDK_BUTTON1_MOTION_MASK | GDK_BUTTON_PRESS_MASK | GDK_BUTTON_RELEASE_MASK | GDK_ENTER_NOTIFY_MASK | GDK_LEAVE_NOTIFY_MASK</property>
+			      <signal name="expose_event" handler="on_selectedResult_expose_event" last_modification_time="Wed, 06 Sep 2006 06:53:01 GMT"/>
+			      <signal name="button_press_event" handler="on_selectedResult_button_press_event" last_modification_time="Wed, 06 Sep 2006 06:53:48 GMT"/>
+			      <signal name="button_release_event" handler="on_selectedResult_button_release_event" last_modification_time="Wed, 06 Sep 2006 06:53:52 GMT"/>
+			      <signal name="motion_notify_event" handler="on_selectedResult_motion_notify_event" last_modification_time="Wed, 06 Sep 2006 06:56:55 GMT"/>
+			      <signal name="configure_event" handler="on_selectedResult_configure_event" last_modification_time="Wed, 06 Sep 2006 06:57:12 GMT"/>
+			      <signal name="enter_notify_event" handler="on_selectedResult_enter_notify_event" last_modification_time="Wed, 06 Sep 2006 08:30:25 GMT"/>
+			      <signal name="leave_notify_event" handler="on_selectedResult_leave_notify_event" last_modification_time="Wed, 06 Sep 2006 08:30:30 GMT"/>
+			    </widget>
+			    <packing>
+			      <property name="left_attach">1</property>
+			      <property name="right_attach">2</property>
+			      <property name="top_attach">1</property>
+			      <property name="bottom_attach">2</property>
+			    </packing>
+			  </child>
+
+			  <child>
+			    <widget class="GtkVRuler" id="resultVRuler">
+			      <property name="visible">True</property>
+			      <property name="metric">GTK_PIXELS</property>
+			      <property name="lower">0</property>
+			      <property name="upper">10</property>
+			      <property name="position">5.41284418106</property>
+			      <property name="max_size">10</property>
+			    </widget>
+			    <packing>
+			      <property name="left_attach">0</property>
+			      <property name="right_attach">1</property>
+			      <property name="top_attach">1</property>
+			      <property name="bottom_attach">2</property>
+			      <property name="x_options">fill</property>
+			      <property name="y_options">fill</property>
+			    </packing>
+			  </child>
+
+			  <child>
+			    <widget class="GtkHRuler" id="resultHRuler">
+			      <property name="visible">True</property>
+			      <property name="metric">GTK_PIXELS</property>
+			      <property name="lower">0</property>
+			      <property name="upper">10</property>
+			      <property name="position">4.86876630783</property>
+			      <property name="max_size">10</property>
+			    </widget>
+			    <packing>
+			      <property name="left_attach">1</property>
+			      <property name="right_attach">2</property>
+			      <property name="top_attach">0</property>
+			      <property name="bottom_attach">1</property>
+			      <property name="x_options">fill</property>
+			      <property name="y_options">fill</property>
+			    </packing>
+			  </child>
 			</widget>
 		      </child>
 		    </widget>
